--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
-	jvmArgs '-agentlib:native-image-agent=config-output-dir=src/main/resources/META-INF/native-image'
+//	jvmArgs '-agentlib:native-image-agent=config-output-dir=src/main/resources/META-INF/native-image'
 }
 
 eclipse.classpath.file.whenMerged {
